# studies

./: .gitignore
01_zig_learn/: README.md  test_if.zig  test_loops.zig
02_lc3_vm/src/: main.zig
03_cpp/: declaration.cpp  definition.cpp  hello.cpp  initialization.cpp
04_lisp_sytem_implementation/: README.md  prelude.c
04_pythonjson/: example.py  jason.py
cells/: cells.py  pyproject.toml
proto/: proto.py  proto_test.py  pyproject.toml  self.py
proto/static/: protozoa.js
proto/templates/: base.html  index.html
sheets/: README.md  pyproject.toml
sheets/sheets/: __init__.py
