[tool.poetry]
name = "sheets"
version = "0.1.0"
description = "window systems by example ... in python"
authors = ["latrokles"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PySDL2 = "^0.9.16"
click = "^8.1.7"

[tool.poetry.scripts]
sheets = "sheets:launch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
